<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".drawer.AboutFragment"
                                                   android:id="@+id/ConstraintLayout"
                                                   android:background="@drawable/drawable_turqoise_gradient">
    <TextView
            android:text="@string/jens_verboven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Jens"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Bram"
            app:layout_constraintStart_toStartOf="@+id/Bram" android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/cedric_claes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Cedric"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Jeroen"
            app:layout_constraintStart_toStartOf="@+id/Jeroen" android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/oliver_van_roey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Oliver"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Jens"
            app:layout_constraintStart_toStartOf="@+id/Jens" android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/turab_bug_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Turab"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Oliver"
            app:layout_constraintStart_toStartOf="@+id/Oliver" android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/jeroen_verstraete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Jeroen"
            app:layout_constraintTop_toBottomOf="@+id/AboutCreatedBy" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/AboutCreatedBy" android:textColor="@android:color/black"
            android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/ontwikkeld_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AboutCreatedBy" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp" android:textSize="18sp"
            android:textStyle="bold" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/bram_van_buynder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bram"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Cedric"
            app:layout_constraintStart_toStartOf="@+id/Cedric" android:textStyle="bold|italic" android:textSize="30sp"/>
    <TextView
            android:text="@string/pinecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PineCode"
            android:textStyle="bold" android:textSize="18sp"
            android:textColor="@color/colorPurple_900"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="8dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:src="@mipmap/pinecodelogo2"
            android:layout_width="93dp"
            android:layout_height="93dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:id="@+id/imageView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="75dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/_2019"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_2019"
            app:layout_constraintTop_toTopOf="@+id/PineCode" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/PineCode"
            android:textStyle="bold" android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <ImageView
            android:src="@drawable/ic_copyright_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>