<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.viewpager.widget.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/ViewPager" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorSecondary"/>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/drawable_turqoise_gradient"
            app:tabIndicatorColor="@color/colorSecondaryDark" app:tabRippleColor="@color/colorSecondaryLight"
            android:id="@+id/TablayoutProject" app:tabTextColor="@android:color/black"
            app:tabSelectedTextColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/guideline15" android:layout_marginBottom="-15dp"
            android:layout_marginTop="-2dp">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/proj_detail"
                android:icon="@drawable/bottomnav_detail"
                android:text="@string/bottomnav_details"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/proj_ideations"
                android:icon="@drawable/bottomnav_ideation"
                android:text="@string/bottomnav_ideations"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/proj_surveys"
                android:icon="@drawable/bottomnav_comments"
                android:text="@string/bottomnav_surveys"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline15"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.9015048"/>


</androidx.constraintlayout.widget.ConstraintLayout>