<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:id="@+id/constraintLayout">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailInputLayout"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/guideline"
            app:boxBackgroundColor="@color/colorAmber_A400" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            android:textColorHint="@color/colorSecondaryLight">

        <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorSecondaryDark" android:textColorHint="@color/colorSecondary"
                android:background="@drawable/shape"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
            android:layout_marginTop="72dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
            android:textColorHint="@color/colorSecondaryLight">

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorSecondaryDark"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/shape"
        />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.4008208"/>


    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.71"/>
    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="131dp"
            android:layout_height="137dp"
            android:src="@mipmap/pinecodelogo2"
            android:id="@+id/Drawer_Logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="102dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:adjustViewBounds="false"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="3dp"
    />
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/LoginButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@drawable/roundedbutton"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary" android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline24"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="vertical" app:layout_constraintGuide_end="206dp"
                                                app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/nomember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NotAMemberTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black" app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/registernow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RegisterTextView" app:layout_constraintStart_toEndOf="@+id/NotAMemberTextView"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="@+id/NotAMemberTextView"
            app:layout_constraintBottom_toBottomOf="@+id/NotAMemberTextView" android:textStyle="bold"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline24"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.79"/>

</androidx.constraintlayout.widget.ConstraintLayout>